1999-12-18  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/gfig/gfig.c: Use g_get_home_dir(). Use
	G_DIR_SEPARATOR. Fix a bug I introduced (for Win32) a week ago.

1999-12-18  Michael Natterer  <mitch@gimp.org>

	* app/colormap_dialog.i.c: My last change caused a warning. Fixed now.

1999-12-18  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c: reverted the splash back to it's previous state
	(with decoration).

1999-12-17  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c
	* app/gdisplay_ops.c: Set "allow_grow" to FALSE for "Really Quit?" and
	"Changes were made to ... Close Anyway?".

	* app/gimpui.c: fixed a compiler warning.

	* app/tips_dialog.c: Same as above and did some code cleanup.

	* app/colormap_dialog.i.c
	* app/colormap_dialog.p.h: Allow dragging a color with mouse2
	without changing the active color. Replaced the "index" entry with
	a spinbutton. Code & UI cleanup.

1999-12-18  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* app/transform_tool.c: Fixed typo.

	* plug-ins/common/CEL.c
	* plug-ins/common/aa.c
	* plug-ins/common/align_layers.c
	* po-plug-ins/POTFILES.in: Added gettext support.

Fri Dec 17 20:29:12 GMT 1999  Adam D. Moss <adam@gimp.org>

	* app/edit_selection.c: Fixed a couple of bugs with translating
	the selection mask (move tool, alt-drag):
	
	- Selection mask was being clipped whilst moved around, not just
	  at its final resting place.
        - Selection mask translation was being performed 'live' like the
          opaque moves even though there's simply nothing exciting to see.
	  Now the process is much faster.

	Will remove the edit_selection.c dead-code later if this change
	does not cause new trouble.

1999-12-17  Michael Natterer  <mitch@gimp.org>

	* app/gimphelp.c
	* plug-ins/helpbrowser/helpbrowser.c

	- Pass the locale to use (currently always "C") to the help
	  browser procedures instead of hardcoding it in the help browser.
	- Wheel mouse support for the help browser.
