@@ -1,3 +1,8 @@
+1999-12-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/preferences_dialog.c: Added a special help function which
+	shows the help for the active notebook page.
+
 1999-12-18  Tor Lillqvist  <tml@iki.fi>
 
 	* plug-ins/gfig/gfig.c: Use g_get_home_dir(). Use
